# TABME

./: .gitignore  .rtx.toml  README.md  download_dataset.sh  predict.py  preprocess_pdfs.sh  pyproject.toml  requirements.txt  run.py  sample_folders.py  validation.py
data/: sample_folders.py  test_folders.txt  val_folders.txt
notebooks/: evaluations.ipynb  full_model_predictions_full_model_prediction.csv  full_model_predictions_test-data.csv  generate csv file.ipynb  test-data.csv
output/: results_20230726-171812.csv  results_summary.csv
utils/: config.py  dataset.py  evaluation.py  train.py
