[tool.poetry]
name = "tabme"
version = "0.1.0"
description = ""
authors = ["Greg Headley <greg.headley@informed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4"
click = "^8.1.4"
polars = "^0.18.6"
xlsx2csv = "^0.8.1"
pypdf = "^3.12.1"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
h5py = "^3.9.0"
numba = "^0.57.1"
umap-learn = "^0.5.3"
transformers = "^4.30.2"
torchvision = "^0.15.2"
torch = "^2.0.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
